--- a/docs/resources-and-tools/lsd/components/Collapse.mdx
+++ b/docs/resources-and-tools/lsd/components/Collapse.mdx
@@ -1,62 +1,9 @@
 import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
-# Collapse
-## Preview
-<StorybookDemo name="Collapse" storybookUrl="https://63e4f71c39dc65c5c703c1e8-okbpyopeex.chromatic.com/" storyId="collapse--root" globalTypes={{
-  "themeColor": {
-    "name": "Theme Color",
-    "description": "Theme Color",
-    "defaultValue": "Light",
-    "toolbar": {
-      "title": " Theme Color",
-      "icon": "circlehollow",
-      "items": [
-        {
-          "title": "Light",
-          "value": "Light",
-          "icon": "circlehollow"
-        },
-        {
-          "title": "Dark",
-          "value": "Dark",
-          "icon": "circle"
-        }
-      ]
-    }
-  },
-  "themeFont": {
-    "name": "Theme Font",
-    "description": "Theme Font",
-    "defaultValue": "monospace",
-    "toolbar": {
-      "title": " Theme Font",
-      "items": [
-        {
-          "title": "monospace",
-          "value": "monospace"
-        },
-        {
-          "title": "sans-serif",
-          "value": "sans-serif"
-        },
-        {
-          "title": "serif",
-          "value": "serif"
-        }
-      ]
-    }
-  }
-}} componentProperties={[
-  {
-    "name": "size",
-    "type": {
-      "name": "enum",
-      "value": [
-        "small",
-        "medium",
-        "large"
-      ]
-    },
-    "defaultValue": "small"
-  }
-]} />
+---
+title: Collapse
+---
+
+# 
+
+<StorybookDemo name="Collapse" storybookUrl="https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/" storyId="collapse--root" globalTypes={{}} componentProperties={[]} />
