chore: update LSD docs
refs #12

--- a/docs/resources-and-tools/lsd/components/Breadcrumb.mdx
+++ b/docs/resources-and-tools/lsd/components/Breadcrumb.mdx
@@ -4,6 +4,6 @@ title: Breadcrumb
 
 import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
-# 
+# Breadcrumb
 
-<StorybookDemo name="Breadcrumb" storybookUrl="https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/" storyId="breadcrumb--root" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="Breadcrumb" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="breadcrumb--docs" globalTypes={{}} componentProperties={[]} />
