--- a/docs/resources-and-tools/lsd/components/Card.mdx
+++ b/docs/resources-and-tools/lsd/components/Card.mdx
@@ -4,6 +4,6 @@ title: Card
 
 import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
-# 
+# Card
 
-<StorybookDemo name="Card" storybookUrl="https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/" storyId="card--root" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="Card" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="card--docs" globalTypes={{}} componentProperties={[]} />
