--- a/docs/resources-and-tools/lsd/components/CheckboxGroup.mdx
+++ b/docs/resources-and-tools/lsd/components/CheckboxGroup.mdx
@@ -4,6 +4,6 @@ title: CheckboxGroup
 
 import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
-# 
+# CheckboxGroup
 
-<StorybookDemo name="CheckboxGroup" storybookUrl="https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/" storyId="checkboxgroup--root" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="CheckboxGroup" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="checkboxgroup--docs" globalTypes={{}} componentProperties={[]} />
