--- a/docs/resources-and-tools/lsd/components/IconButtonGroup.mdx
+++ b/docs/resources-and-tools/lsd/components/IconButtonGroup.mdx
@@ -4,6 +4,6 @@ title: IconButtonGroup
 
 import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
-# 
+# IconButtonGroup
 
-<StorybookDemo name="IconButtonGroup" storybookUrl="https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/" storyId="iconbuttongroup--root" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="IconButtonGroup" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="iconbuttongroup--docs" globalTypes={{}} componentProperties={[]} />
