--- a/docs/resources-and-tools/lsd/components/Typography.mdx
+++ b/docs/resources-and-tools/lsd/components/Typography.mdx
@@ -4,6 +4,6 @@ title: Typography
 
 import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
-# 
+# Typography
 
-<StorybookDemo name="Typography" storybookUrl="https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/" storyId="typography--root" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="Typography" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="typography--docs" globalTypes={{}} componentProperties={[]} />
