--- a/docs/resources-and-tools/lsd/components/Autocomplete.mdx
+++ b/docs/resources-and-tools/lsd/components/Autocomplete.mdx
@@ -4,6 +4,6 @@ title: Autocomplete
 
 import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
-# 
+# Autocomplete
 
-<StorybookDemo name="Autocomplete" storybookUrl="https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/" storyId="autocomplete--root" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="Autocomplete" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="autocomplete--docs" globalTypes={{}} componentProperties={[]} />
