--- a/docs/resources-and-tools/lsd/components/Badge.mdx
+++ b/docs/resources-and-tools/lsd/components/Badge.mdx
@@ -4,6 +4,6 @@ title: Badge
 
 import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
-# 
+# Badge
 
-<StorybookDemo name="Badge" storybookUrl="https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/" storyId="badge--root" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="Badge" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="badge--docs" globalTypes={{}} componentProperties={[]} />
