--- a/docs/resources-and-tools/lsd/components/Button.mdx
+++ b/docs/resources-and-tools/lsd/components/Button.mdx
@@ -4,6 +4,6 @@ title: Button
 
 import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
-# 
+# Button
 
-<StorybookDemo name="Button" storybookUrl="https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/" storyId="button--root" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="Button" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="button--docs" globalTypes={{}} componentProperties={[]} />
