--- a/docs/resources-and-tools/lsd/components/Collapse.mdx
+++ b/docs/resources-and-tools/lsd/components/Collapse.mdx
@@ -4,6 +4,6 @@ title: Collapse
 
 import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
-# 
+# Collapse
 
-<StorybookDemo name="Collapse" storybookUrl="https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/" storyId="collapse--root" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="Collapse" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="collapse--docs" globalTypes={{}} componentProperties={[]} />
