--- a/docs/resources-and-tools/lsd/components/DateField.mdx
+++ b/docs/resources-and-tools/lsd/components/DateField.mdx
@@ -4,6 +4,6 @@ title: DateField
 
 import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
-# 
+# DateField
 
-<StorybookDemo name="DateField" storybookUrl="https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/" storyId="datefield--uncontrolled" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="DateField" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="datefield--uncontrolled" globalTypes={{}} componentProperties={[]} />
