--- a/docs/resources-and-tools/lsd/components/Dropdown.mdx
+++ b/docs/resources-and-tools/lsd/components/Dropdown.mdx
@@ -4,6 +4,6 @@ title: Dropdown
 
 import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
-# 
+# Dropdown
 
-<StorybookDemo name="Dropdown" storybookUrl="https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/" storyId="dropdown--root" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="Dropdown" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="dropdown--docs" globalTypes={{}} componentProperties={[]} />
