--- a/docs/resources-and-tools/lsd/components/IconButton.mdx
+++ b/docs/resources-and-tools/lsd/components/IconButton.mdx
@@ -4,6 +4,6 @@ title: IconButton
 
 import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
-# 
+# IconButton
 
-<StorybookDemo name="IconButton" storybookUrl="https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/" storyId="iconbutton--root" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="IconButton" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="iconbutton--docs" globalTypes={{}} componentProperties={[]} />
