--- a/docs/resources-and-tools/lsd/components/Modal.mdx
+++ b/docs/resources-and-tools/lsd/components/Modal.mdx
@@ -4,6 +4,6 @@ title: Modal
 
 import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
-# 
+# Modal
 
-<StorybookDemo name="Modal" storybookUrl="https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/" storyId="modal--root" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="Modal" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="modal--docs" globalTypes={{}} componentProperties={[]} />
