--- a/docs/resources-and-tools/lsd/components/NumberInput.mdx
+++ b/docs/resources-and-tools/lsd/components/NumberInput.mdx
@@ -4,6 +4,6 @@ title: NumberInput
 
 import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
-# 
+# NumberInput
 
-<StorybookDemo name="NumberInput" storybookUrl="https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/" storyId="numberinput--root" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="NumberInput" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="numberinput--docs" globalTypes={{}} componentProperties={[]} />
