--- a/docs/resources-and-tools/lsd/components/Quote.mdx
+++ b/docs/resources-and-tools/lsd/components/Quote.mdx
@@ -4,6 +4,6 @@ title: Quote
 
 import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
-# 
+# Quote
 
-<StorybookDemo name="Quote" storybookUrl="https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/" storyId="quote--root" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="Quote" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="quote--docs" globalTypes={{}} componentProperties={[]} />
