--- a/docs/resources-and-tools/lsd/components/RadioButton.mdx
+++ b/docs/resources-and-tools/lsd/components/RadioButton.mdx
@@ -4,6 +4,6 @@ title: RadioButton
 
 import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
-# 
+# RadioButton
 
-<StorybookDemo name="RadioButton" storybookUrl="https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/" storyId="radiobutton--root" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="RadioButton" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="radiobutton--docs" globalTypes={{}} componentProperties={[]} />
