--- a/docs/resources-and-tools/lsd/components/RadioButtonGroup.mdx
+++ b/docs/resources-and-tools/lsd/components/RadioButtonGroup.mdx
@@ -4,6 +4,6 @@ title: RadioButtonGroup
 
 import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
-# 
+# RadioButtonGroup
 
-<StorybookDemo name="RadioButtonGroup" storybookUrl="https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/" storyId="radiobuttongroup--root" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="RadioButtonGroup" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="radiobuttongroup--docs" globalTypes={{}} componentProperties={[]} />
