--- a/docs/resources-and-tools/lsd/components/Table.mdx
+++ b/docs/resources-and-tools/lsd/components/Table.mdx
@@ -4,6 +4,6 @@ title: Table
 
 import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
-# 
+# Table
 
-<StorybookDemo name="Table" storybookUrl="https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/" storyId="table--root" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="Table" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="table--docs" globalTypes={{}} componentProperties={[]} />
