--- a/docs/resources-and-tools/lsd/components/Tabs.mdx
+++ b/docs/resources-and-tools/lsd/components/Tabs.mdx
@@ -4,6 +4,6 @@ title: Tabs
 
 import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
-# 
+# Tabs
 
-<StorybookDemo name="Tabs" storybookUrl="https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/" storyId="tabs--root" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="Tabs" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="tabs--docs" globalTypes={{}} componentProperties={[]} />
