--- a/docs/resources-and-tools/lsd/components/ThemeProvider.mdx
+++ b/docs/resources-and-tools/lsd/components/ThemeProvider.mdx
@@ -4,6 +4,6 @@ title: ThemeProvider
 
 import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
-# 
+# ThemeProvider
 
-<StorybookDemo name="ThemeProvider" storybookUrl="https://63e4f71c39dc65c5c703c1e8-wupbbkorgt.chromatic.com/" storyId="themeprovider--root" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="ThemeProvider" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="themeprovider--docs" globalTypes={{}} componentProperties={[]} />
