manually synched content round 1

--- a/docs/visual-language/color.mdx
+++ b/docs/visual-language/color.mdx
@@ -6,31 +6,17 @@ displayed_sidebar: main
 
 import { ColorCard, Grid } from "@site/src/components/mdx"
 
-# Color
+Our belief is that color should be used intentionally to communicate a message and evoke a specific emotion, rather than as an aesthetic choice. As a result, our color palette is minimalistic and designed to complement our typography and other visual elements.
 
-## **Introduction**
+Our philosophy towards color is grounded in our core values of simplicity, functionality, and accessibility. We take inspiration from our roots in underground culture, where black and white copy machine zines were a powerful tool for change.
 
-At Logos, we approach color with a clear purpose and intention. Our belief is that color should be used intentionally to communicate a message and evoke a specific emotion, rather than as an aesthetic choice. As a result, our color palette is minimalistic and designed to complement our typography and other visual elements.
+We adhere to the W3C's Web Content Accessibility Guidelines (WCAG) to ensure that our designs are accessible to as many people as possible, regardless of their visual abilities. This includes providing sufficient color contrast and avoiding the use of color alone to convey important information. By following these guidelines, we can create designs that are inclusive and accessible for everyone.
 
-Our philosophy towards color is grounded in our core values of simplicity, functionality, and accessibility. We take inspiration from our roots in underground culture, where black and white copy machine zines were a powerful tool for change. We use black and white as our primary colors because they are neutral, accessible, and have the least cultural and social connotations. We believe in the power of minimalism and the impact that can be achieved with simple and clear communication.
-
-We also believe in the power of DIY culture and accessibility. Our brand is designed to be accessible and reproducible by anyone, anywhere, with any tool. Whether you're a professional designer with access to Adobe software or a person in a war or protest environment with just a stencil and spray can, we want our brand to be accessible and reproducible for all.
-
-## Web-**Default Color Systems**
+## **Web\-Default Color Systems**
 
 In order to maintain a consistent experience for our users, we prefer to rely on the default color systems available on each platform or device. This approach ensures that our designs are accessible to the widest possible audience and that they adhere to the platform conventions. Additionally, by relying on the default color systems, we reduce the amount of data that our users need to consume, making our designs more accessible and faster to load.
 
-We only allow non-default colors when black and white are not enough to fulfill a specific function or need, such as the default yellow color of the **`<mark>`** element, or the blue color of hyperlinks.
-
-It is important to note that when using colors, we adhere to the W3C's Web Content Accessibility Guidelines (WCAG) to ensure that our designs are accessible to as many people as possible, regardless of their visual abilities. This includes providing sufficient color contrast, and avoiding the use of color alone to convey important information. By following these guidelines, we can create designs that are inclusive and accessible for everyone.
-
-## **Purposeful Color Usage**
-
-When we do use color, we do so purposefully. Our color palette is designed to complement the typography and other visual elements and to evoke a particular emotion or convey a message. The color should not distract or detract from the message, but rather, serve to enhance it.
-
-We also believe in the importance of accessibility and ensuring that our designs are inclusive and accessible to all. We follow the Web Content Accessibility Guidelines set by the World Wide Web Consortium (W3C) to ensure that our color usage is accessible to individuals with visual impairments or color blindness.
-
-In summary, our approach to color is rooted in our core values of simplicity, functionality, and accessibility. We rely on default color systems to ensure consistency and accessibility, and we use color purposefully to complement our typography and other visual elements.
+We only allow non-default colors when black and white are not enough to fulfill a specific function or need, such as the blue color of hyperlinks.
 
 [Primary Palette](https://www.notion.so/8b15323df0d84a7c9ee520ecbcf38930)
 
