--- a/docs/visual-language/color.mdx
+++ b/docs/visual-language/color.mdx
@@ -4,6 +4,8 @@ sidebar_position: 3
 displayed_sidebar: main
 ---
 
+import { ColorCard, Grid } from "@site/src/components/mdx"
+
 # Color
 
 Our belief is that color should be used intentionally to communicate a message and evoke a specific emotion, rather than as an aesthetic choice. As a result, our color palette is minimalistic and designed to complement our typography and other visual elements.
@@ -12,10 +14,17 @@ Our philosophy towards color is grounded in our core values of simplicity, funct
 
 We adhere to the W3C's Web Content Accessibility Guidelines (WCAG) to ensure that our designs are accessible to as many people as possible, regardless of their visual abilities. This includes providing sufficient color contrast and avoiding the use of color alone to convey important information. By following these guidelines, we can create designs that are inclusive and accessible for everyone.
 
-## **Web-Default Color Systems**
+## **Web\-Default Color Systems**
 
 In order to maintain a consistent experience for our users, we prefer to rely on the default color systems available on each platform or device. This approach ensures that our designs are accessible to the widest possible audience and that they adhere to the platform conventions. Additionally, by relying on the default color systems, we reduce the amount of data that our users need to consume, making our designs more accessible and faster to load.
 
 We only allow non-default colors when black and white are not enough to fulfill a specific function or need, such as the blue color of hyperlinks.
 
-[Primary Palette](https://www.notion.so/8b15323df0d84a7c9ee520ecbcf38930)
+<Grid xs={{ cols: 1, wrap: true, gap: '16px' }} md={{ cols: 2 }}>
+  <Grid.Item xs={1}>
+    <ColorCard fullWidth title="Black" color="rgb(var(--lsd-theme-primary))" variables={[{ name: "Hex", value: "#000" }, { name: "RGB", value: "0, 0, 0" }]} />
+  </Grid.Item>
+  <Grid.Item xs={1}>
+    <ColorCard fullWidth title="White" color="rgb(var(--lsd-theme-secondary))" variables={[{ name: "Hex", value: "#fff" }, { name: "RGB", value: "255, 255, 255" }]} />
+  </Grid.Item>
+</Grid>
