--- a/docs/visual-language/color.mdx
+++ b/docs/visual-language/color.mdx
@@ -14,7 +14,7 @@ Our philosophy towards color is grounded in our core values of simplicity, funct
 
 We adhere to the W3C's Web Content Accessibility Guidelines (WCAG) to ensure that our designs are accessible to as many people as possible, regardless of their visual abilities. This includes providing sufficient color contrast and avoiding the use of color alone to convey important information. By following these guidelines, we can create designs that are inclusive and accessible for everyone.
 
-## **Web\-Default Color Systems**
+## Web-Default Color Systems
 
 In order to maintain a consistent experience for our users, we prefer to rely on the default color systems available on each platform or device. This approach ensures that our designs are accessible to the widest possible audience and that they adhere to the platform conventions. Additionally, by relying on the default color systems, we reduce the amount of data that our users need to consume, making our designs more accessible and faster to load.
 
