multiple design feedback fixes

--- a/docs/visual-language/grid-and-layout/index.mdx
+++ b/docs/visual-language/grid-and-layout/index.mdx
@@ -2,10 +2,10 @@
 title: Grid and Layout
 ---
 
+import DocCardList from '@theme/DocCardList';
+
 # Grid and Layout
 
 At the core of our design philosophy is the belief that good design is functional and accessible. To achieve this, we rely on a grid system that provides a consistent and reliable foundation for all of our designs. Our grid system is not only a tool for organizing content and creating layouts, but also a reflection of our values and principles.
 
-[Web environment](/visual-language/grid-and-layout/web-environment)
-
-[Non-web environment](/visual-language/grid-and-layout/non-web-environment)
+<DocCardList className="DocCardList--no-overview"/>
