--- a/docs/gallery.mdx
+++ b/docs/gallery.mdx
@@ -39,7 +39,7 @@ export const galleryImages = [
     { src: '/28.png'},
 ]
 
-<ImageGrid>
+<ImageGrid md={{cols: 2, gap: "16px"}} xs={{cols: 2, gap: "16px"}}>
     {galleryImages.map((img, index) => (
         <Grid.Item key={index}>
             <img src={img.src} />
