--- a/docs/lsd/index.mdx
+++ b/docs/lsd/index.mdx
@@ -4,7 +4,7 @@ displayed_sidebar: main
 pagination_label: LSD - UI Library
 ---
 
-import { CardWithIcon, FigmaIcon, ChromaticIcon } from '@site/src/components/mdx';
+import { CardWithIcon, FigmaIcon, ChromaticIcon, Grid } from '@site/src/components/mdx';
 
 # Overview
 
@@ -14,18 +14,21 @@ LSD is an open-source design system challenging conventional norms in the world 
 
 ### Radical Theme
 
-<div style={{display: "flex", justifyContent: "center", gap: "16px"}}>
-<CardWithIcon
-    title="LSD - Radical"
-    subtitle="www.figma.com"
-    href="https://www.figma.com/file/DVfLHVRl8adBPYkgq02Qki/LSD-%E2%80%93-Radical?type=design&node-id=22%3A796&mode=design&t=17y4ysCLSxyCKece-1"
-    icon={<FigmaIcon />}
-/>
-
-<CardWithIcon
-    title="Library • acid-info/lsd"
-    subtitle="www.chromatic.com"
-    href="https://www.chromatic.com/library?appId=63e4f71c39dc65c5c703c1e8"
-    icon={<ChromaticIcon />}/>
-</div>
+<Grid xs={{ cols: 1, wrap: true, gap: '16px' }} md={{ cols: 2 }}>
+    <Grid.Item xs={1}>
+        <CardWithIcon
+            title="LSD - Radical"
+            subtitle="www.figma.com"
+            href="https://www.figma.com/file/DVfLHVRl8adBPYkgq02Qki/LSD-%E2%80%93-Radical?type=design&node-id=22%3A796&mode=design&t=17y4ysCLSxyCKece-1"
+            icon={<FigmaIcon />}
+        />
+    </Grid.Item>
+    <Grid.Item xs={1}>
+        <CardWithIcon
+            title="Library • acid-info/lsd"
+            subtitle="www.chromatic.com"
+            href="https://www.chromatic.com/library?appId=63e4f71c39dc65c5c703c1e8"
+            icon={<ChromaticIcon />}/>
+    </Grid.Item>
+</Grid>
 
