--- a/docs/visual-language/grid-and-layout/web-environment.mdx
+++ b/docs/visual-language/grid-and-layout/web-environment.mdx
@@ -39,39 +39,12 @@ Gutter size - 16px.
 
 ### Desktop
 
-<ImageGrid md={{cols: 2, gap: "16px"}}>
-        <Grid.Item>
-            <img src="/Untitled-1.png" />
-        </Grid.Item>
-        <Grid.Item>
-            <img src="/Untitled-2.png" />
-        </Grid.Item>
-        <Grid.Item>
-            <img src="/Untitled-3.png" />
-        </Grid.Item>
-        <Grid.Item>
-            <img src="/Untitled-4.png" />
-        </Grid.Item>
-</ImageGrid>
+<ImageGrid md={{cols: 2, gap: "16px"}} imageArray={[{src: "/Untitled-1.png"}, {src: "/Untitled-2.png"}, {src: "/Untitled-3.png"}, {src: "/Untitled-4.png"}]} />
 
 ### Tablet
 
-<ImageGrid md={{cols: 2, gap: "16px"}}>
-        <Grid.Item>
-            <img src="/Untitled-5.png" />
-        </Grid.Item>
-        <Grid.Item>
-            <img src="/Untitled-6.png" />
-        </Grid.Item>
-</ImageGrid>
+<ImageGrid md={{cols: 2, gap: "16px"}} imageArray={[{src: "/Untitled-5.png"}, {src: "/Untitled-6.png"}]} />
 
 ### Mobile
 
-<ImageGrid md={{cols: 2, gap: "16px"}}>
-        <Grid.Item>
-            <img src="/Untitled-7.png" />
-        </Grid.Item>
-        <Grid.Item>
-            <img src="/Untitled-8.png" />
-        </Grid.Item>
-</ImageGrid>
+<ImageGrid md={{cols: 2, gap: "16px"}} imageArray={[{src: "/Untitled-7.png"}, {src: "/Untitled-8.png"}]} />
