--- a/docs/visual-language/illustration.mdx
+++ b/docs/visual-language/illustration.mdx
@@ -91,13 +91,7 @@ Nimbus - Aphrodite with halo, lightness, symbol of love, attraction
 
 Waku - Prometheus, delivering transformative technology
 
-<ImageGrid xs={{cols: 2, gap: "16px"}} md={{cols: 4, gap: "16px"}}>
-    {protocolPromotion.map((img, index) => (
-        <Grid.Item key={index}>
-            <img src={img.src} />
-        </Grid.Item>
-    ))}
-</ImageGrid>
+<ImageGrid mode="square-thumbnails" xs={{cols: 2, gap: "16px"}} md={{cols: 4, gap: "16px"}} imageArray={protocolPromotion} />
 
 ## Conceptual
 
@@ -105,13 +99,7 @@ The selected illustration style is detailed, and symmetrical to suggest the subl
 
 Need to come up with a plan/process for creating/buying/commissioning/using this type of illustration. Could be applicable to Network State Press articles and social promo stuff.
 
-<ImageGrid xs={{cols: 2, gap: "16px"}} md={{cols: 4, gap: "16px"}}>
-    {conceptualImages.map((img, index) => (
-        <Grid.Item key={index}>
-            <img src={img.src} />
-        </Grid.Item>
-    ))}
-</ImageGrid>
+<ImageGrid mode="square-thumbnails" xs={{cols: 2, gap: "16px"}} md={{cols: 4, gap: "16px"}} imageArray={conceptualImages} />
 
 ## Abstract
 
@@ -119,10 +107,4 @@ Texture can be preferable giving a layering or aging effect to the work suggesti
 
 HIO uses these abstracts for the Flash Hash episode covers.
 
-<ImageGrid xs={{cols: 4, gap: "16px"}} md={{cols: 7, gap: "16px"}}>
-    {abstractImages.map((img, index) => (
-        <Grid.Item key={index}>
-            <img src={img.src} />
-        </Grid.Item>
-    ))}
-</ImageGrid>
+<ImageGrid mode="square-thumbnails" xs={{cols: 4, gap: "16px"}} md={{cols: 7, gap: "16px"}} imageArray={abstractImages} />
