--- a/docs/visual-language/photography.mdx
+++ b/docs/visual-language/photography.mdx
@@ -66,34 +66,16 @@ We have a unique photography style for each of the following categories; Portrai
 
 This style, primarily used for podcast promotion, incorporates black-and-white visuals with dramatic lighting when feasible. It typically frames subjects with a good amount of head and shoulders. Try to ensure guest consent when possible.
 
-<ImageGrid xs={{cols: 2, gap: "16px"}} md={{cols: 4, gap: "16px"}}>
-    {portraits.map((img, index) => (
-        <Grid.Item key={index}>
-            <img src={img.src} />
-        </Grid.Item>
-    ))}
-</ImageGrid>
+<ImageGrid mode="square-thumbnails" xs={{cols: 2, gap: "16px"}} md={{cols: 4, gap: "16px"}} imageArray={portraits} />
 
 ## Activism
 
 This style is predominantly employed for Network State Press articles and presentations, featuring a black-and-white color scheme. It integrates a journalistic approach with both stock photography and real-life imagery from protests and demonstrations. While a preference is given to free resources, licensed content can also be considered.
 
-<ImageGrid xs={{cols: 2, gap: "16px"}} md={{cols: 4, gap: "16px"}}>
-    {activismImages.map((img, index) => (
-        <Grid.Item key={index}>
-            <img src={img.src} />
-        </Grid.Item>
-    ))}
-</ImageGrid>
+<ImageGrid mode="square-thumbnails" xs={{cols: 2, gap: "16px"}} md={{cols: 4, gap: "16px"}} imageArray={activismImages} />
 
 ## Conceptual
 
 This style is primarily utilized for Network State Press articles and presentations, encompassing a journalistic approach along with the inclusion of stock photography. It is designed to align with fundamental Logos concepts, such as human rights, privacy, and civil liberties. While free resources are preferred, the use of licensed materials can be explored.
 
-<ImageGrid xs={{cols: 2, gap: "16px"}} md={{cols: 4, gap: "16px"}}>
-    {conceptualImages.map((img, index) => (
-        <Grid.Item key={index}>
-            <img src={img.src} />
-        </Grid.Item>
-    ))}
-</ImageGrid>
+<ImageGrid mode="square-thumbnails" xs={{cols: 2, gap: "16px"}} md={{cols: 4, gap: "16px"}} imageArray={conceptualImages} />
