--- a/docs/visual-language/typography/web-environment.mdx
+++ b/docs/visual-language/typography/web-environment.mdx
@@ -2,6 +2,8 @@
 title: Web Environments
 ---
 
+import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
+
 # Web Environments
 
 In our web environments, we lean toward a concept inspired by the decentralized mental model. Instead of imposing a singular font choice, we rely on the default web fonts present on users' browsers and systems. Our strategy offers key advantages:
@@ -37,4 +39,4 @@ font-family: Serif
 
 ### [LSD](https://logos-brand-guidelines.vercel.app/category/lsd---ui-library) type stack
 
-![Untitled](/TypographyWebEnvironment.png)
+<StorybookDemo name="Typography" docId="themeprovider--docs" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" storyId="themeprovider--typography" globalTypes={{}} componentProperties={[]} globalControls={["themeFont"]} />
