--- a/docs/lsd/components/Button.mdx
+++ b/docs/lsd/components/Button.mdx
@@ -6,4 +6,4 @@ import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
 # Button
 
-<StorybookDemo name="Button" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="button--docs" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="Button" storybookUrl="https://main--63e4f71c39dc65c5c703c1e8.chromatic.com/" docId="button--docs" globalTypes={{}} componentProperties={[]} />
