--- a/docs/lsd/components/ButtonGroup.mdx
+++ b/docs/lsd/components/ButtonGroup.mdx
@@ -6,4 +6,4 @@ import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
 # ButtonGroup
 
-<StorybookDemo name="ButtonGroup" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="buttongroup--docs" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="ButtonGroup" storybookUrl="https://main--63e4f71c39dc65c5c703c1e8.chromatic.com/" docId="buttongroup--docs" globalTypes={{}} componentProperties={[]} />
