--- a/docs/lsd/components/Collapse.mdx
+++ b/docs/lsd/components/Collapse.mdx
@@ -6,4 +6,4 @@ import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
 # Collapse
 
-<StorybookDemo name="Collapse" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="collapse--docs" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="Collapse" storybookUrl="https://main--63e4f71c39dc65c5c703c1e8.chromatic.com/" docId="collapse--docs" globalTypes={{}} componentProperties={[]} />
