--- a/docs/lsd/components/DatePicker.mdx
+++ b/docs/lsd/components/DatePicker.mdx
@@ -6,4 +6,4 @@ import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
 # DatePicker
 
-<StorybookDemo name="DatePicker" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="datepicker--uncontrolled" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="DatePicker" storybookUrl="https://main--63e4f71c39dc65c5c703c1e8.chromatic.com/" docId="datepicker--uncontrolled" globalTypes={{}} componentProperties={[]} />
