--- a/docs/lsd/components/DateRangePicker.mdx
+++ b/docs/lsd/components/DateRangePicker.mdx
@@ -6,4 +6,4 @@ import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
 # DateRangePicker
 
-<StorybookDemo name="DateRangePicker" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="daterangepicker--uncontrolled" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="DateRangePicker" storybookUrl="https://main--63e4f71c39dc65c5c703c1e8.chromatic.com/" docId="daterangepicker--uncontrolled" globalTypes={{}} componentProperties={[]} />
