--- a/docs/lsd/components/IconButton.mdx
+++ b/docs/lsd/components/IconButton.mdx
@@ -6,4 +6,4 @@ import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
 # IconButton
 
-<StorybookDemo name="IconButton" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="iconbutton--docs" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="IconButton" storybookUrl="https://main--63e4f71c39dc65c5c703c1e8.chromatic.com/" docId="iconbutton--docs" globalTypes={{}} componentProperties={[]} />
