--- a/docs/lsd/components/NumberInput.mdx
+++ b/docs/lsd/components/NumberInput.mdx
@@ -6,4 +6,4 @@ import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
 # NumberInput
 
-<StorybookDemo name="NumberInput" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="numberinput--docs" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="NumberInput" storybookUrl="https://main--63e4f71c39dc65c5c703c1e8.chromatic.com/" docId="numberinput--docs" globalTypes={{}} componentProperties={[]} />
