--- a/docs/lsd/components/RadioButtonGroup.mdx
+++ b/docs/lsd/components/RadioButtonGroup.mdx
@@ -6,4 +6,4 @@ import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
 # RadioButtonGroup
 
-<StorybookDemo name="RadioButtonGroup" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="radiobuttongroup--docs" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="RadioButtonGroup" storybookUrl="https://main--63e4f71c39dc65c5c703c1e8.chromatic.com/" docId="radiobuttongroup--docs" globalTypes={{}} componentProperties={[]} />
