--- a/docs/lsd/components/Tag.mdx
+++ b/docs/lsd/components/Tag.mdx
@@ -6,4 +6,4 @@ import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
 # Tag
 
-<StorybookDemo name="Tag" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="tag--docs" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="Tag" storybookUrl="https://main--63e4f71c39dc65c5c703c1e8.chromatic.com/" docId="tag--docs" globalTypes={{}} componentProperties={[]} />
