--- a/docs/lsd/components/ThemeProvider.mdx
+++ b/docs/lsd/components/ThemeProvider.mdx
@@ -6,4 +6,4 @@ import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
 # ThemeProvider
 
-<StorybookDemo name="ThemeProvider" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="themeprovider--docs" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="ThemeProvider" storybookUrl="https://main--63e4f71c39dc65c5c703c1e8.chromatic.com/" docId="themeprovider--docs" globalTypes={{}} componentProperties={[]} />
