--- a/docs/lsd/components/Toast.mdx
+++ b/docs/lsd/components/Toast.mdx
@@ -6,4 +6,4 @@ import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
 # Toast
 
-<StorybookDemo name="Toast" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="toast--docs" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="Toast" storybookUrl="https://main--63e4f71c39dc65c5c703c1e8.chromatic.com/" docId="toast--docs" globalTypes={{}} componentProperties={[]} />
