--- a/docs/lsd/components/ToastProvider.mdx
+++ b/docs/lsd/components/ToastProvider.mdx
@@ -6,4 +6,4 @@ import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
 # ToastProvider
 
-<StorybookDemo name="ToastProvider" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" docId="toastprovider--docs" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="ToastProvider" storybookUrl="https://main--63e4f71c39dc65c5c703c1e8.chromatic.com/" docId="toastprovider--docs" globalTypes={{}} componentProperties={[]} />
