--- a/docs/lsd/design-tokens/Typography.mdx
+++ b/docs/lsd/design-tokens/Typography.mdx
@@ -6,4 +6,4 @@ import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
 # Typography
 
-<StorybookDemo name="Typography" docId="themeprovider--docs" storybookUrl="https://63e4f71c39dc65c5c703c1e8-trawpnaxme.chromatic.com" storyId="themeprovider--typography" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="Typography" docId="themeprovider--docs" storybookUrl="https://main--63e4f71c39dc65c5c703c1e8.chromatic.com/" storyId="themeprovider--typography" globalTypes={{}} componentProperties={[]} />
