--- a/docs/visual-language/typography/web-environment.mdx
+++ b/docs/visual-language/typography/web-environment.mdx
@@ -37,6 +37,6 @@ font-family: Serif
 
 ## Examples
 
-### [LSD](https://logos-brand-guidelines.vercel.app/category/lsd---ui-library) type stack
+### LSD type stack
 
 <StorybookDemo name="Typography" docId="themeprovider--docs" storybookUrl="https://main--63e4f71c39dc65c5c703c1e8.chromatic.com" storyId="themeprovider--typography" globalTypes={{}} componentProperties={[]} globalControls={["themeFont"]} />
