update globalControls for the design token components

--- a/docs/lsd/design-tokens/Spacing.mdx
+++ b/docs/lsd/design-tokens/Spacing.mdx
@@ -6,4 +6,4 @@ import { StorybookDemo } from '@site/src/components/mdx/StorybookDemo';
 
 # Spacing
 
-<StorybookDemo name="Spacing" docId="themeprovider--docs" storybookUrl="https://main--63e4f71c39dc65c5c703c1e8.chromatic.com/" storyId="themeprovider--spacing" globalTypes={{}} componentProperties={[]} />
+<StorybookDemo name="Spacing" docId="themeprovider--docs" storybookUrl="https://main--63e4f71c39dc65c5c703c1e8.chromatic.com/" storyId="themeprovider--spacing" globalTypes={{}} componentProperties={[]} globalControls={[]}/>
