refactor: remove duplicate components
This commit removes the following components that are redundant and have existing alternatives in the Logos theme package:
- CardWithIcon and PresentationKit, which are both duplicates of the ExternalResourceCard component
- LogoCard, which is a duplicate of the AssetCard component

--- a/docs/lsd/index.mdx
+++ b/docs/lsd/index.mdx
@@ -4,7 +4,7 @@ displayed_sidebar: main
 pagination_label: LSD - UI Library
 ---
 
-import { CardWithIcon, FigmaIcon, ChromaticIcon, Grid } from '@site/src/components/mdx';
+import { ExternalResourceCard, Grid } from '@site/src/components/mdx';
 
 # Overview
 
@@ -16,19 +16,20 @@ LSD is an open-source design system challenging conventional norms in the world 
 
 <Grid xs={{ cols: 1, wrap: true, gap: '16px' }} md={{ cols: 2 }}>
     <Grid.Item xs={1}>
-        <CardWithIcon
+        <ExternalResourceCard
             title="LSD - Radical"
-            subtitle="www.figma.com"
+            description="www.figma.com"
             href="https://www.figma.com/file/DVfLHVRl8adBPYkgq02Qki/LSD-%E2%80%93-Radical?type=design&node-id=22%3A796&mode=design&t=17y4ysCLSxyCKece-1"
-            icon={<FigmaIcon />}
+            logoSrc="/icons/figma.svg"
         />
     </Grid.Item>
     <Grid.Item xs={1}>
-        <CardWithIcon
+        <ExternalResourceCard
             title="Library • acid-info/lsd"
-            subtitle="www.chromatic.com"
+            description="www.chromatic.com"
             href="https://www.chromatic.com/library?appId=63e4f71c39dc65c5c703c1e8"
-            icon={<ChromaticIcon />}/>
+            logoSrc="/icons/chromatic.svg"
+        />
     </Grid.Item>
 </Grid>
 
