--- a/docs/templates/social-media-assets.mdx
+++ b/docs/templates/social-media-assets.mdx
@@ -1,41 +1,44 @@
 
 # Social media assets
 
-import { CardWithIcon, FigmaIcon, ImageGrid, Grid } from '@site/src/components/mdx';
+import { ExternalResourceCard, Grid } from '@site/src/components/mdx';
 
 <Grid xs={{ cols: 1, wrap: true, gap: '16px' }} md={{ cols: 2 }}>
     <Grid.Item xs={1}>
         <div className="template-card-title">Network State Press templates</div>
-        <CardWithIcon
+        <ExternalResourceCard
             title="Logos templates"
-            subtitle="www.figma.com"
+            description="www.figma.com"
             href="https://www.figma.com/file/qH2d0UtCAcrcn23or1WgfB/Logos-templates?type=design&node-id=212%3A175&mode=design&t=0bOCaBBwhofQKq0c-1"
-            icon={<FigmaIcon />}
+            logoSrc="/icons/figma.svg"
         />
     </Grid.Item>
     <Grid.Item xs={1}>
         <div className="template-card-title">Tweet templates</div>
-        <CardWithIcon
+        <ExternalResourceCard
             title="Logos templates"
-            subtitle="www.figma.com"
+            description="www.figma.com"
             href="https://www.figma.com/file/qH2d0UtCAcrcn23or1WgfB/Logos-templates?type=design&node-id=212%3A391&mode=design&t=0bOCaBBwhofQKq0c-1"
-            icon={<FigmaIcon />}/>
+            logoSrc="/icons/figma.svg"
+        />
     </Grid.Item>
     <Grid.Item xs={1}>
         <div className="template-card-title">Logos podcast templates</div>
-        <CardWithIcon
+        <ExternalResourceCard
             title="Logos templates"
-            subtitle="www.figma.com"
+            description="www.figma.com"
             href="https://www.figma.com/file/qH2d0UtCAcrcn23or1WgfB/Logos-templates?type=design&node-id=0%3A1&mode=design&t=0bOCaBBwhofQKq0c-1"
-            icon={<FigmaIcon />}/>
+            logoSrc="/icons/figma.svg"
+        />
     </Grid.Item>
     <Grid.Item xs={1}>
         <div className="template-card-title">Hashing It Out templates</div>
-        <CardWithIcon
+        <ExternalResourceCard
             title="Logos templates"
-            subtitle="www.figma.com"
+            description="www.figma.com"
             href="https://www.figma.com/file/qH2d0UtCAcrcn23or1WgfB/Logos-templates?type=design&node-id=212%3A325&mode=design&t=0bOCaBBwhofQKq0c-1"
-            icon={<FigmaIcon />}/>
+            logoSrc="/icons/figma.svg"
+        />
     </Grid.Item>
 </Grid>
 
