--- a/docs/visual-language/logo.mdx
+++ b/docs/visual-language/logo.mdx
@@ -4,8 +4,7 @@ sidebar_position: 2
 displayed_sidebar: main
 ---
 
-import { LogoCard } from '@site/src/components/mdx/LogoCard';
-
+import { AssetCard } from '@site/src/components/mdx';
 
 # Logo
 
@@ -18,18 +17,34 @@ When our brand is represented in other contexts, throughout the web or in produc
 ## Primary Mark
 
 <div style={{display: "flex", gap: "16px"}}>
-  <LogoCard
+  <AssetCard
     title="Mark - Black"
-    logoHref="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-mark-display-black.svg"
-    svgHref="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-mark-primary-black.svg"
-    pngHref="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-mark-primary-black.png"
+    previewSrc="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-mark-display-black.svg"
+    downloadable={[
+      {
+        title: "PNG",
+        src: "https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-mark-primary-black.png"
+      },
+      {
+        title: "SVG",
+        src: "https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-mark-primary-black.svg"
+      }
+    ]}
   />
 
-  <LogoCard
+  <AssetCard
     title="Mark - White"
-    logoHref="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-mark-display-white.svg"
-    svgHref="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-mark-primary-white.svg"
-    pngHref="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-mark-primary-white.png"
+    previewSrc="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-mark-display-white.svg"
+    downloadable={[
+      {
+        title: "PNG",
+        src: "https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-mark-primary-white.png"
+      },
+      {
+        title: "SVG",
+        src: "https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-mark-primary-white.svg"
+      }
+    ]}
   />
 </div>
 
@@ -38,18 +53,35 @@ When our brand is represented in other contexts, throughout the web or in produc
 These vertical lockups are best used arranged horizontally in a line.
 
 <div style={{display: "flex", gap: "16px"}}>
-  <LogoCard
+  <AssetCard
     title="Vertical lockup - Black"
-    logoHref="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-vertical-display-black.svg"
-    svgHref="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-vertical-black.svg"
-    pngHref="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-vertical-black.png"
+    previewSrc="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-vertical-display-black.svg"
+    downloadable={[
+      {
+        title: "PNG",
+        src: "https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-vertical-black.png"
+      },
+      {
+        title: "SVG",
+        src: "https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-vertical-black.svg"
+      }
+    ]}
   />
 
-  <LogoCard
+  <AssetCard
     title="Vertical lockup - White"
-    logoHref="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-vertical-display-white.svg"
-    svgHref="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-vertical-white.svg"
-    pngHref="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-vertical-white.png"  />
+    previewSrc="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-vertical-display-white.svg"
+    downloadable={[
+      {
+        title: "PNG",
+        src: "https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-vertical-white.png" 
+      },
+      {
+        title: "SVG",
+        src: "https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-vertical-white.svg"
+      }
+    ]}
+  />
 </div>
 
 ## Lockup — Horizontal
@@ -57,18 +89,35 @@ These vertical lockups are best used arranged horizontally in a line.
 These horizontal lockups are best used stacked vertically.
 
 <div style={{display: "flex", gap: "16px"}}>
-  <LogoCard
+  <AssetCard
     title="Horizontal lockup - Black"
-    logoHref="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-horizontal-display-black.svg"
-    svgHref="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-horizontal-black.svg"
-    pngHref="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-horizontal-black.png"
+    previewSrc="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-horizontal-display-black.svg"
+    downloadable={[
+      {
+        title: "PNG",
+        src: "https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-horizontal-black.png"
+      },
+      {
+        title: "SVG",
+        src: "https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-horizontal-black.svg"
+      }
+    ]}
   />
 
-  <LogoCard
+  <AssetCard
     title="Horizontal lockup - White"
-    logoHref="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-horizontal-display-white.svg"
-    svgHref="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-horizontal-white.svg"
-    pngHref="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-horizontal-white.png"  />
+    previewSrc="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-horizontal-display-white.svg"
+    downloadable={[
+      {
+        title: "PNG",
+        src: "https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-horizontal-white.png" 
+      },
+      {
+        title: "SVG",
+        src: "https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-horizontal-white.svg"
+      }
+    ]}
+  />
 </div>
 
 ## Clearspace
