--- a/docs/visual-language/grid-and-layout/web-environment.mdx
+++ b/docs/visual-language/grid-and-layout/web-environment.mdx
@@ -3,7 +3,7 @@ title: Web Environment
 ---
 
 
-import { CardWithIcon, FigmaIcon, ImageGrid, Grid } from '@site/src/components/mdx';
+import { ExternalResourceCard, ImageGrid } from '@site/src/components/mdx';
 
 ## Spacing
 
@@ -27,11 +27,11 @@ Gutter size - 16px.
 
 ### Web grid templates
 
-<CardWithIcon
+<ExternalResourceCard
     title="Logos templates"
-    subtitle="www.figma.com"
+    description="www.figma.com"
     href="https://www.figma.com/file/qH2d0UtCAcrcn23or1WgfB/Logos-templates?type=design&node-id=215%3A8&mode=design&t=0bOCaBBwhofQKq0c-1"
-    icon={<FigmaIcon />}
+    logoSrc="/icons/figma.svg"
     style={{ maxWidth: "390px"}}
 />
 
