chore: update images; refs #28

--- a/docs/visual-language/grid-and-layout/non-web-environment.mdx
+++ b/docs/visual-language/grid-and-layout/non-web-environment.mdx
@@ -2,7 +2,7 @@
 title: Non-web Environment
 ---
 
-import { ImageGrid, Grid } from "@site/src/components/mdx"
+import { ImageGrid, Grid } from '@site/src/components/mdx'
 
 # Non-web environment
 
@@ -16,16 +16,60 @@ The typestack for these grids is also based in multiples of 20px, line height ad
 
 2 column 20px and 4 column 20px
 
-<ImageGrid md={{cols: 2, gap: "16px"}} images={[{ src: "/Clip_path_group.png" }, { src: "/Logos-Example-2.png" }]} />
+<ImageGrid
+  md={{ cols: 2, gap: '16px' }}
+  images={[
+    {
+      src: '/grid-and-layout/non-web-environment/Logos-Example-1.png',
+      img: require('/grid-and-layout/non-web-environment/Logos-Example-1.png'),
+    },
+    {
+      src: '/grid-and-layout/non-web-environment/Logos-Example-2.png',
+      img: require('/grid-and-layout/non-web-environment/Logos-Example-2.png'),
+    },
+  ]}
+/>
 
 ### Hashing It Out
 
 3 column 20px and 2 column 20px
 
-<ImageGrid md={{cols: 2, gap: "16px"}} images={[{ src: "/HIO-Examples-1.png" }, { src: "/HIO-Examples-2.png" }]} />
+<ImageGrid
+  md={{ cols: 2, gap: '16px' }}
+  images={[
+    {
+      src: '/grid-and-layout/non-web-environment/HIO-Examples-1.png',
+      img: require('/grid-and-layout/non-web-environment/HIO-Examples-1.png'),
+    },
+    {
+      src: '/grid-and-layout/non-web-environment/HIO-Examples-2.png',
+      img: require('/grid-and-layout/non-web-environment/HIO-Examples-2.png'),
+    },
+  ]}
+/>
 
 ### Generic Twitter
 
 This is a simpler grid based on 96px, used for X. Type sizes are also based on divisions of the 96px unit.
 
-<ImageGrid md={{cols: 2, gap: "16px"}} images={[{ src: "/image_5.png" }, { src: "/image_6.png" }, { src: "/image_7.png" }, { src: "/image_8.png" }]} />
+<ImageGrid
+  md={{ cols: 2, gap: '16px' }}
+  images={[
+    {
+      src: '/grid-and-layout/non-web-environment/Social media-Example-1.png',
+      img: require('/grid-and-layout/non-web-environment/Social media-Example-1.png'),
+    },
+    {
+      src: '/grid-and-layout/non-web-environment/Social media-Example-2.png',
+      img: require('/grid-and-layout/non-web-environment/Social media-Example-2.png'),
+    },
+    {
+      src: '/grid-and-layout/non-web-environment/Social media-Example-3.png',
+      img: require('/grid-and-layout/non-web-environment/Social media-Example-3.png'),
+    },
+    {
+      src: '/grid-and-layout/non-web-environment/Social media-Example-4.png',
+      img: require('/grid-and-layout/non-web-environment/Social media-Example-4.png'),
+    },
+  ]}
+/>
