--- a/docs/visual-language/logo.mdx
+++ b/docs/visual-language/logo.mdx
@@ -19,6 +19,7 @@ When our brand is represented in other contexts, throughout the web or in produc
 <div style={{display: "flex", gap: "16px"}}>
   <AssetCard
     title="Mark - Black"
+    forceDownload
     previewSrc="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-mark-display-black.svg"
     downloadable={[
       {
@@ -34,6 +35,7 @@ When our brand is represented in other contexts, throughout the web or in produc
 
   <AssetCard
     title="Mark - White"
+    forceDownload
     previewSrc="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-mark-display-white.svg"
     downloadable={[
       {
@@ -55,6 +57,7 @@ These vertical lockups are best used arranged horizontally in a line.
 <div style={{display: "flex", gap: "16px"}}>
   <AssetCard
     title="Vertical lockup - Black"
+    forceDownload
     previewSrc="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-vertical-display-black.svg"
     downloadable={[
       {
@@ -70,6 +73,7 @@ These vertical lockups are best used arranged horizontally in a line.
 
   <AssetCard
     title="Vertical lockup - White"
+    forceDownload
     previewSrc="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-vertical-display-white.svg"
     downloadable={[
       {
@@ -91,6 +95,7 @@ These horizontal lockups are best used stacked vertically.
 <div style={{display: "flex", gap: "16px"}}>
   <AssetCard
     title="Horizontal lockup - Black"
+    forceDownload
     previewSrc="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-horizontal-display-black.svg"
     downloadable={[
       {
@@ -106,6 +111,7 @@ These horizontal lockups are best used stacked vertically.
 
   <AssetCard
     title="Horizontal lockup - White"
+    forceDownload
     previewSrc="https://raw.githubusercontent.com/acid-info/design-assets/fd0fcfd7b2a2ff641bd3b0663e541d26d9f1de16/logos/logos-lockup-horizontal-display-white.svg"
     downloadable={[
       {
