feat: add links to LSD's Github and NPM pages; refs #28

--- a/docs/lsd/index.mdx
+++ b/docs/lsd/index.mdx
@@ -31,5 +31,20 @@ LSD is an open-source design system challenging conventional norms in the world 
             logoSrc="/icons/chromatic.svg"
         />
     </Grid.Item>
+    <Grid.Item xs={1}>
+        <ExternalResourceCard
+            title="Github - LSD"
+            description="www.github.com"
+            href="https://github.com/acid-info/lsd"
+            logoSrc="/icons/github.svg"
+        />
+    </Grid.Item>
+    <Grid.Item xs={1}>
+        <ExternalResourceCard
+            title="NPM Package - LSD"
+            description="www.npmjs.com"
+            href="https://www.npmjs.com/package/@acid-info/lsd-react"
+            logoSrc="/icons/npm.svg"
+        />
+    </Grid.Item>
 </Grid>
-
